<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="10dp">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:gravity="center_horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
            <Button android:id="@+id/w_Prev" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Вернуться"/>
            <Button android:id="@+id/w_OK_Sett2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Сохранить"/>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:id="@+id/tVopros" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/work_num"/>
            <EditText android:id="@+id/w_num" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:inputType="number"/>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:id="@+id/editText1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/s_adr"/>
            <EditText android:id="@+id/w_adr" android:layout_width="wrap_content" android:layout_height="wrap_content" android:ems="10" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:id="@+id/tVariant" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/s_port"/>
            <EditText android:id="@+id/w_port" android:layout_width="wrap_content" android:layout_height="wrap_content" android:ems="10" android:layout_weight="1" android:inputType="number"/>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <CheckBox android:textSize="12sp" android:id="@+id/chVar2Sett2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="Включить звук"/>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <EditText android:id="@+id/for_pauza_t" android:layout_width="91dp" android:layout_height="wrap_content" android:text="5" android:ems="10" android:inputType="number">
                <requestFocus/>
            </EditText>
            <TextView android:id="@+id/tZap1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="Задержка отображения времени экзамена при скроллинге (1-6)" android:layout_weight="10"/>
        </LinearLayout>
        <LinearLayout android:gravity="center_horizontal" android:layout_gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <EditText android:id="@+id/tFontSize" android:layout_width="91dp" android:layout_height="wrap_content" android:text="10" android:ems="10" android:inputType="number"/>
            <TextView android:layout_gravity="left|center_vertical|center_horizontal|center" android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="@string/sFontSize" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <EditText android:id="@+id/im_height" android:layout_width="91dp" android:layout_height="wrap_content" android:text="235" android:ems="10" android:inputType="number"/>
            <TextView android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="Высота изображения по вертикали (100 - 600)" android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
