<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="8dp">
    <FrameLayout android:id="@+id/frameLayout2Tic" android:layout_width="match_parent" android:layout_height="30dp">
        <TextView android:textStyle="bold" android:id="@+id/tVoprosTic" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sNumVoprBrowse"/>
        <TextView android:textStyle="bold" android:id="@+id/tVariantTic" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="300dp" android:text="@string/sVarOtveta"/>
    </FrameLayout>
    <CheckBox android:scrollbarAlwaysDrawVerticalTrack="true" android:scrollbarStyle="insideOverlay" android:textStyle="bold" android:gravity="top" android:id="@+id/chVar5Tic" android:scrollbars="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:text="5" android:layout_below="@+id/tZap3" android:layout_alignLeft="@+id/chVar4Tic"/>
    <TextView android:id="@+id/tZap4" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="T" android:layout_toRightOf="@+id/chVar2Tic" android:layout_below="@+id/chVar5Tic"/>
    <CheckBox android:scrollbarAlwaysDrawVerticalTrack="true" android:scrollbarStyle="insideOverlay" android:textStyle="bold" android:gravity="top" android:id="@+id/chVar6Tic" android:scrollbars="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:text="6" android:layout_below="@+id/tZap4" android:layout_alignLeft="@+id/chVar5Tic"/>
    <LinearLayout android:orientation="horizontal" android:id="@+id/linearLayout2Tic" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_above="@+id/linearLayout1Tic" android:layout_alignLeft="@+id/tVoprMainTic">
        <TextView android:layout_gravity="center_vertical" android:id="@+id/tNumVoprBrowseTic" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sNumVoprBrowse"/>
        <TextView android:textSize="16sp" android:textStyle="bold" android:layout_gravity="center_vertical" android:id="@+id/tOtvetYesTic" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:text="1 из 5"/>
        <ImageButton android:id="@+id/bPrevTic" android:layout_width="60dp" android:layout_height="40dp" android:layout_marginLeft="8dp" android:src="@drawable/prev"/>
        <ImageButton android:id="@+id/bNextTic" android:layout_width="60dp" android:layout_height="40dp" android:src="@drawable/next"/>
        <TextView android:layout_gravity="center_vertical" android:id="@+id/tAnsTic" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:text="@string/sAnsw"/>
        <TextView android:textSize="16dp" android:textStyle="bold" android:layout_gravity="center_vertical" android:id="@+id/tAnswerTic" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="1"/>
        <TextView android:layout_gravity="center_vertical" android:id="@+id/tRez" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:text="@string/sRez"/>
        <TextView android:textStyle="bold" android:layout_gravity="center_vertical" android:id="@+id/tResult" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="  "/>
        <TextView android:layout_gravity="center_vertical" android:id="@+id/tCena" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="@string/sCena"/>
        <TextView android:textStyle="bold" android:layout_gravity="center_vertical" android:id="@+id/tOcenka" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="  "/>
        <TextView android:layout_gravity="center_vertical" android:id="@+id/tNoAnsver" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="@string/sNoAnsver"/>
        <TextView android:textStyle="bold" android:layout_gravity="center_vertical" android:id="@+id/tNoAns" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="0"/>
        <ImageButton android:id="@+id/iBuUpBrowsTic" android:layout_width="60dp" android:layout_height="40dp" android:layout_marginLeft="8dp" android:src="@drawable/up"/>
        <ImageButton android:id="@+id/iBuDownBrowsTic" android:layout_width="60dp" android:layout_height="40dp" android:src="@drawable/down"/>
    </LinearLayout>
    <CheckBox android:scrollbarAlwaysDrawVerticalTrack="true" android:scrollbarStyle="insideOverlay" android:textStyle="bold" android:gravity="top" android:id="@+id/chVar1Tic" android:scrollbars="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40dp" android:layout_marginRight="10dp" android:checked="false" android:text="1" android:layout_toRightOf="@+id/tVoprMainTic" android:layout_below="@+id/frameLayout2Tic"/>
    <TextView android:id="@+id/tZap1" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40dp" android:text="T" android:layout_toRightOf="@+id/tVoprMainTic" android:layout_below="@+id/chVar1Tic"/>
    <LinearLayout android:gravity="bottom" android:orientation="horizontal" android:id="@+id/linearLayout1Tic" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <ImageButton android:id="@+id/bVoprTic" android:layout_width="60dp" android:layout_height="40dp" android:src="@drawable/vopr4"/>
        <TextView android:id="@+id/tTema" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="@string/sTicket"/>
        <TextView android:id="@+id/tNomerTicket" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:text="123"/>
        <TextView android:id="@+id/tOtvetsTic" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="@string/sOtvets"/>
        <TextView android:id="@+id/tNOtvetsTic" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:text="100"/>
        <TextView android:id="@+id/tErrorsTic" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="@string/sErrors"/>
        <TextView android:id="@+id/tNErrorsTic" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:text="100"/>
        <Button android:textSize="12sp" android:id="@+id/bOKTic" android:layout_width="50dp" android:layout_height="40dp" android:layout_marginLeft="10dp" android:text="OK"/>
        <TextView android:textSize="30dp" android:textStyle="bold" android:layout_gravity="center_vertical" android:id="@+id/tTimeTic" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40dp" android:text="00:00"/>
        <Button android:textSize="12sp" android:id="@+id/bCloseTic" android:layout_width="wrap_content" android:layout_height="40dp" android:layout_marginLeft="40dp" android:text="Выход"/>
    </LinearLayout>
    <CheckBox android:scrollbarAlwaysDrawVerticalTrack="true" android:scrollbarStyle="insideOverlay" android:textStyle="bold" android:gravity="top" android:id="@+id/chVar2Tic" android:scrollbars="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:text="2" android:layout_below="@+id/tZap1" android:layout_alignLeft="@+id/chVar1Tic"/>
    <TextView android:id="@+id/tZap2" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40dp" android:text="T" android:layout_toRightOf="@+id/tVoprMainTic" android:layout_below="@+id/chVar2Tic"/>
    <CheckBox android:scrollbarAlwaysDrawVerticalTrack="true" android:scrollbarStyle="insideOverlay" android:textStyle="bold" android:gravity="top" android:id="@+id/chVar3Tic" android:scrollbars="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:text="3" android:layout_below="@+id/tZap2" android:layout_alignLeft="@+id/chVar2Tic"/>
    <ImageView android:id="@+id/vImageTic" android:layout_width="220dp" android:layout_height="180dp" android:layout_marginTop="10dp" android:scaleType="fitCenter" android:layout_below="@+id/tVoprMainTic" android:layout_alignLeft="@+id/tVoprMainTic" android:layout_alignParentLeft="true"/>
    <TextView android:id="@+id/tVar1Tic" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@+id/chVar1Tic" android:layout_alignBaseline="@+id/chVar1Tic"/>
    <TextView android:id="@+id/tVar3Tic" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@+id/chVar3Tic" android:layout_alignBaseline="@+id/chVar3Tic" android:layout_centerHorizontal="true"/>
    <CheckBox android:scrollbarAlwaysDrawVerticalTrack="true" android:scrollbarStyle="insideOverlay" android:textStyle="bold" android:gravity="top" android:id="@+id/chVar4Tic" android:scrollbars="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:text="4" android:layout_toRightOf="@+id/tVar1Tic" android:layout_below="@+id/frameLayout2Tic"/>
    <TextView android:id="@+id/tZap3" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="T" android:layout_toRightOf="@+id/chVar1Tic" android:layout_below="@+id/chVar4Tic"/>
    <TextView android:id="@+id/tVar5Tic" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@+id/chVar5Tic" android:layout_alignBaseline="@+id/chVar5Tic"/>
    <TextView android:id="@+id/tVar4Tic" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@+id/chVar4Tic" android:layout_alignBaseline="@+id/chVar4Tic"/>
    <TextView android:id="@+id/tVar6Tic" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@+id/chVar6Tic" android:layout_alignBaseline="@+id/chVar6Tic"/>
    <TextView android:id="@+id/tVar2Tic" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@+id/chVar2Tic" android:layout_alignBaseline="@+id/chVar2Tic"/>
    <TextView android:scrollbarAlwaysDrawVerticalTrack="true" android:scrollbarStyle="insideOverlay" android:id="@+id/tVoprMainTic" android:scrollbars="vertical" android:layout_width="250dp" android:layout_height="85dp" android:height="50dp" android:layout_below="@+id/frameLayout2Tic" android:layout_alignParentLeft="true"/>
</RelativeLayout>
