<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_margin="5dp">
    <FrameLayout android:id="@+id/frameLayout1Tem" android:layout_width="match_parent" android:layout_height="30dp">
        <TextView android:textStyle="bold" android:id="@+id/tTema" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="7. Расположение транспортных средств на проезжей части дороги"/>
    </FrameLayout>
    <FrameLayout android:id="@+id/frameLayout2Tem" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_below="@+id/frameLayout1Tem">
        <TextView android:textStyle="bold" android:id="@+id/tVoprosTem" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sNumVoprBrowse"/>
        <TextView android:textStyle="bold" android:id="@+id/tVariantTem" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="300dp" android:text="@string/sVarOtveta"/>
    </FrameLayout>
    <CheckBox android:scrollbarAlwaysDrawVerticalTrack="true" android:scrollbarStyle="insideOverlay" android:textStyle="bold" android:gravity="top" android:id="@+id/chVar5Tem" android:scrollbars="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:text="5" android:layout_below="@+id/tZap3T" android:layout_alignLeft="@+id/chVar4Tem"/>
    <CheckBox android:scrollbarAlwaysDrawVerticalTrack="true" android:scrollbarStyle="insideOverlay" android:textStyle="bold" android:gravity="top" android:id="@+id/chVar6Tem" android:scrollbars="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:text="6" android:layout_below="@+id/tZap4T" android:layout_alignLeft="@+id/chVar5Tem"/>
    <TextView android:id="@+id/tZap4T" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="T" android:layout_below="@+id/chVar5Tem" android:layout_alignLeft="@+id/tZap3T"/>
    <LinearLayout android:orientation="horizontal" android:id="@+id/linearLayout2Tem" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_above="@+id/linearLayout1Tem" android:layout_alignLeft="@+id/tVoprMain">
        <TextView android:layout_gravity="center_vertical" android:id="@+id/tNumVoprTem" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:text="@string/sNumVoprBrowse"/>
        <TextView android:textSize="16sp" android:textStyle="bold" android:layout_gravity="center_vertical" android:id="@+id/tOtvetYesTem" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="1 из 5"/>
        <ImageButton android:id="@+id/bPrevTem" android:layout_width="60dp" android:layout_height="40dp" android:src="@drawable/prev"/>
        <ImageButton android:id="@+id/bNextTem" android:layout_width="60dp" android:layout_height="40dp" android:src="@drawable/next"/>
        <TextView android:layout_gravity="center_vertical" android:id="@+id/tAnsTem" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="@string/sAnsw"/>
        <TextView android:textSize="16dp" android:textStyle="bold" android:layout_gravity="center_vertical" android:id="@+id/tAnswerTem" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="1"/>
        <TextView android:layout_gravity="center_vertical" android:id="@+id/tRez" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:text="@string/sRez"/>
        <TextView android:textStyle="bold" android:layout_gravity="center_vertical" android:id="@+id/tResult" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="  "/>
        <TextView android:layout_gravity="center_vertical" android:id="@+id/tCena" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="@string/sCena"/>
        <TextView android:textStyle="bold" android:layout_gravity="center_vertical" android:id="@+id/tOcenka" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="  "/>
        <TextView android:layout_gravity="center_vertical" android:id="@+id/tNoAnsver" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="@string/sNoAnsver"/>
        <TextView android:textStyle="bold" android:layout_gravity="center_vertical" android:id="@+id/tNoAns" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="0"/>
        <ImageButton android:id="@+id/iBuUpTem" android:layout_width="60dp" android:layout_height="40dp" android:layout_marginLeft="30dp" android:src="@drawable/up"/>
        <ImageButton android:id="@+id/iBuDownTem" android:layout_width="60dp" android:layout_height="40dp" android:src="@drawable/down"/>
    </LinearLayout>
    <CheckBox android:scrollbarAlwaysDrawVerticalTrack="true" android:scrollbarStyle="insideOverlay" android:textStyle="bold" android:gravity="top" android:id="@+id/chVar1Tem" android:scrollbars="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40dp" android:layout_marginRight="5dp" android:checked="false" android:text="1" android:layout_toRightOf="@+id/tVoprMainTem" android:layout_below="@+id/frameLayout2Tem"/>
    <TextView android:id="@+id/tZap1T" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40dp" android:text="T" android:layout_toRightOf="@+id/tVoprMainTem" android:layout_below="@+id/chVar1Tem"/>
    <LinearLayout android:gravity="bottom" android:orientation="horizontal" android:id="@+id/linearLayout1Tem" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <ImageButton android:id="@+id/bVoprTem" android:layout_width="60dp" android:layout_height="40dp" android:src="@drawable/vopr4"/>
        <TextView android:layout_gravity="center_vertical" android:id="@+id/tOtvetsTem" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="@string/sOtvets"/>
        <TextView android:layout_gravity="center_vertical" android:id="@+id/tNOtvetsTem" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="100"/>
        <TextView android:layout_gravity="center_vertical" android:id="@+id/tErrorsTem" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="@string/sErrors"/>
        <TextView android:layout_gravity="center_vertical" android:id="@+id/tNErrorsTem" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="100"/>
        <Button android:textSize="12sp" android:id="@+id/bOKTem" android:layout_width="50dp" android:layout_height="40dp" android:layout_marginLeft="40dp" android:text="OK"/>
        <TextView android:textSize="30dp" android:textStyle="bold" android:layout_gravity="center_vertical" android:id="@+id/tTimeTicTem" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="00:00"/>
        <Button android:textSize="12sp" android:id="@+id/bCloseTem" android:layout_width="wrap_content" android:layout_height="40dp" android:layout_marginLeft="20dp" android:text="Выход"/>
    </LinearLayout>
    <CheckBox android:scrollbarAlwaysDrawVerticalTrack="true" android:scrollbarStyle="insideOverlay" android:textStyle="bold" android:gravity="top" android:id="@+id/chVar2Tem" android:scrollbars="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:text="2" android:layout_below="@+id/tZap1T" android:layout_alignLeft="@+id/chVar1Tem"/>
    <TextView android:id="@+id/tZap2T" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="T" android:layout_below="@+id/chVar2Tem" android:layout_alignLeft="@+id/tZap1T"/>
    <CheckBox android:scrollbarAlwaysDrawVerticalTrack="true" android:scrollbarStyle="insideOverlay" android:textStyle="bold" android:gravity="top" android:id="@+id/chVar3Tem" android:scrollbars="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:text="3" android:layout_below="@+id/tZap2T" android:layout_alignLeft="@+id/chVar2Tem"/>
    <TextView android:scrollbarAlwaysDrawVerticalTrack="true" android:scrollbarStyle="insideOverlay" android:id="@+id/tVoprMainTem" android:scrollbars="vertical" android:layout_width="250dp" android:layout_height="75dp" android:text="  " android:height="50dp" android:layout_below="@+id/frameLayout2Tem" android:layout_alignParentLeft="true"/>
    <ImageView android:id="@+id/vImageTem" android:layout_width="220dp" android:layout_height="180dp" android:layout_marginTop="10dp" android:scaleType="fitCenter" android:layout_below="@+id/tVoprMainTem" android:layout_alignLeft="@+id/tVoprMainTem" android:layout_alignParentLeft="true"/>
    <TextView android:id="@+id/tVar1Tem" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="  " android:layout_toRightOf="@+id/chVar1Tem" android:layout_alignBaseline="@+id/chVar1Tem"/>
    <TextView android:id="@+id/tVar3Tem" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="  " android:layout_toRightOf="@+id/chVar3Tem" android:layout_alignBaseline="@+id/chVar3Tem" android:layout_centerHorizontal="true"/>
    <CheckBox android:scrollbarAlwaysDrawVerticalTrack="true" android:scrollbarStyle="insideOverlay" android:textStyle="bold" android:gravity="top" android:id="@+id/chVar4Tem" android:scrollbars="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:text="4" android:layout_toRightOf="@+id/tVar3Tem" android:layout_below="@+id/frameLayout2Tem"/>
    <TextView android:id="@+id/tZap3T" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="T" android:layout_toRightOf="@+id/tVar1Tem" android:layout_below="@+id/chVar4Tem"/>
    <TextView android:id="@+id/tVar5Tem" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="  " android:layout_toRightOf="@+id/chVar5Tem" android:layout_alignBaseline="@+id/chVar5Tem"/>
    <TextView android:id="@+id/tVar4Tem" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="  " android:layout_toRightOf="@+id/chVar4Tem" android:layout_alignBaseline="@+id/chVar4Tem"/>
    <TextView android:id="@+id/tVar6Tem" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="  " android:layout_toRightOf="@+id/chVar6Tem" android:layout_alignBaseline="@+id/chVar6Tem" android:layout_alignLeft="@+id/tVar6Tem"/>
    <TextView android:id="@+id/tVar2Tem" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="  " android:layout_toRightOf="@+id/chVar2Tem" android:layout_alignBaseline="@+id/chVar2Tem"/>
</RelativeLayout>
